--- a/login.html
+++ b/login.html
@@ -29,11 +29,11 @@
                </div>
                <div class="btn">
                   <div class="inner"></div>
-                  <button type="submit">login as Student </button>
+                  <button><a href="stdent.html">Login as Student</a></button>
                </div>
                <div class="btn">
                 <div class="inner"></div>
-                <button  type="submit" >login as Teacher  </button>
+                <button><a href="teacher.html">login as Teacher </a>  </button>
              </div>
                <div class="signup-link">
                   Not a member? <a href="registration.html">Signup now</a>
