--- a/stdent.html
+++ b/stdent.html
@@ -5,22 +5,52 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student </title>
+    <link rel="stylesheet" href="css/student.css">
 </head>
 <body>
     <nav>
-        <div class="name">
-        <label >Name</label>
-     </div>
-     <div class="logout" <a href="login.html"></a> >
-         <label > Logout</label>
-     </div></nav>
+        <div><h2 class="logo">Student </h2>
+        </div>
+        <div class="search-box">
+            <input type="text" placeholder="Search..">  
+            <li class="nav-link auth"><a href="#">Logout</a></li>
+        </div>
+    </nav>
    <table>
     <tr>
         <th>Id</th>
         <th>Title</th>
         <th>Upload By</th>
         <th>Time</th>
-        <th>Search</th>
+        <th>View</th>
+    </tr>
+    <tr>
+        <td>001</td>
+        <td>Web Technology</td>
+        <td>Sandeep Chaudhary</td>
+        <td>11:00 AM</td>
+        <td> <button class="button_one">Download</button></td>
+    </tr>
+    <tr>
+        <td>002</td>
+        <td>Machine Learning Technique</td>
+        <td>Priyanka Sharma</td>
+        <td>12:00 AM</td>
+        <td> <button class="button_one">Download</button></td>
+    </tr>
+    <tr>
+        <td>003</td>
+        <td>Computer Network</td>
+        <td>Khusboo</td>
+        <td>11:00 AM</td>
+        <td> <button class="button_one">Download</button></td>
+    </tr>
+    <tr>
+        <td>0021</td>
+        <td>Embedded Sysytem</td>
+        <td>Vennet Sharma</td>
+        <td>11:00 AM</td>
+        <td> <button class="button_one">Download</button></td>
     </tr>
    </table>
 </body>
