--- a/teacher.html
+++ b/teacher.html
@@ -8,23 +8,49 @@
    <title>Teacher </title>
 </head>
 <body>
-  
-      <div class="container">
-         <div class="tech">
-            <label >Teacher Work</label>
-         </div>
-         <div class="title">
-            Title:
-            <input type="text" required>
-         </div>
-         <div class="upload">
-            File:
-            <input type="file"  required>
-         </div>
-         <div>
-            <input type="submit" value="submit">
-         </div>
-      </div>
-   
+  <nav>
+   <div><h2 class="logo">Teacher </h2>
+   </div>
+   <div class="search-box">
+       <input type="text" placeholder="Search..">  
+       <li class="nav-link auth"><a href="#">Upload</a></li>
+       <li class="nav-link auth"><a href="#">Logout</a></li>
+   </div>
+  </nav>
+  <table>
+   <tr>
+      <th>Id</th>
+      <th>Title</th>
+      <th>Time</th>
+      <th>View</th>
+  </tr>
+  <tr>
+   <td>001</td>
+   <td>Web Technology</td>
+   <td>11:00 AM</td>
+   <td> <button class="button_one">Update</button>
+ <button class="button_two">Delete</button></td>
+</tr>
+<tr>
+   <td>002</td>
+   <td>Machine Learning Technique</td>
+   <td>12:00 AM</td>
+   <td> <button class="button_one">Update</button>
+      <button class="button_two">Delete</button></td>
+</tr>
+<tr>
+   <td>003</td>
+   <td>Computer Network</td>
+   <td>11:00 AM</td>
+   <td> <button class="button_one">Update</button>
+      <button class="button_two">Delete</button></td>
+</tr>
+<tr>
+   <td>0021</td>
+   <td>Embedded Sysytem</td>
+   <td>11:00 AM</td>
+   <td> <button class="button_one">Update</button>
+      <button class="button_two">Delete</button></td>
+  </table>
 </body>
 </html>
