some more changes

--- a/login.html
+++ b/login.html
@@ -44,6 +44,8 @@
            <button class="btn btn--form" type="submit" value="Log in">
              Log in
            </button>
+           <div class="register-container">
+           <a class="register-btn">Register?</a></div>
          </form>
      </div>
    </body>
